# maid

./: .gitignore  Cargo.toml  LICENSE  Maidfile.toml  README.md
crates/maid/: Cargo.toml
crates/maid-server/: Cargo.toml
crates/maid/client/src/cli/: mod.rs  tasks.rs
crates/maid/src/: main.rs
maid/client/: cli.rs  globals.rs  main.rs  shell.rs  table.rs
maid/client/cli/: butler.rs  dispatch.rs  mod.rs  run.rs  script.rs  tasks.rs  verbose.rs
maid/client/helpers/: maidfile.rs  status.rs  string.rs
maid/client/parse/: file.rs  import.rs  mod.rs
maid/client/server/: cli.rs  file.rs  logger.rs  mod.rs  parse.rs
maid/client/task/: cache.rs  mod.rs  progress.rs
maid/server/: main.rs  table.rs
maid/server/docker/: run.rs
maid/server/helpers/: file.rs  mod.rs
maid/shared/: colors.rs  lib.rs  log.rs  table.rs
maid/shared/helpers/: file.rs  maidfile.rs  status.rs  string.rs
maid/shared/log/: layer.rs  verbose.rs
maid/shared/models/: client.rs  server.rs  shared.rs
