[workspace]
resolver = "2"
members = ["crates/maid", "crates/maid-server"]

[workspace.package]
license = "MIT"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/exact-rs/maid"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[workspace.dependencies]
url = "2.5.3"
log = "0.4.22"
tar = "0.4.43"
colored = "2.1.0"
flate2 = "1.0.35"
env_logger = "0.10.2"
pretty_number = "0.1.0"
clap-verbosity-flag = "2.2.3"
global_placeholders = "0.1.0"

clap = { version = "4.5.21", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json", "blocking", "rustls-tls"] }
