[package]
name = "maid"
version = "2.0.0"
edition = "2021"
license = "BUSL-1.1"

build = "build/attribute.rs"
repository = "https://github.com/exact-rs/maid"
description = "🔨 A comprehensive build tool for all your needs."

[lib]
name = "maid"
path = "maid/shared/lib.rs"

[[bin]]
name = "maid"
path = "maid/client/main.rs"
required-features = ["client"]

[[bin]]
name = "maid-server"
path = "maid/server/main.rs"
required-features = ["server"]

[features]
default = ["client", "server"]

client = [
   "dep:url",
   "dep:toml",
   "dep:hcl-rs",
   "dep:notify", 
   "dep:inquire", 
   "dep:reqwest",
   "dep:fs_extra", 
   "dep:env_logger",
   "dep:serde_yaml",
   "dep:lazy_static",
   "dep:merkle_hash",
   "dep:human_bytes",
   "dep:merge-struct",
   "dep:pretty_number",
   "dep:data-encoding",
   "dep:strip-ansi-escapes",
   "dep:notify-debouncer-mini"
]

server = [
   "dep:libc",
   "dep:bytes",
   "dep:ntapi",
   "dep:tokio",
   "dep:rocket",
   "dep:winapi",
   "dep:chrono",
   "dep:futures",
   "dep:bollard",
   "dep:rocket_ws",
   "dep:tokio-util",
   "dep:futures-core",
   "dep:futures-util",
   "dep:serde_derive",
   "dep:pretty_env_logger"
]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

[dependencies]
tar = "0.4.43"
home = "0.5.9"
colored = "2.1.0"
flate2 = "1.0.35"
anyhow = "1.0.93"
tracing = "0.1.41"
termcolor = "1.4.1"
macros-rs = "1.4.1"
indicatif = "0.17.9"
serde_json = "1.0.133"
text_placeholder = "0.5.1"
global_placeholders = "0.1.0"

clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }

# enable-feature = client
url = { version = "2.5.4", optional = true }
toml = { version = "0.8.19", optional = true }
notify = { version = "6.1.1", optional = true }
hcl-rs = { version = "0.18.2", optional = true }
inquire = { version = "0.6.2", optional = true }
fs_extra = { version = "1.3.0", optional = true }
env_logger = { version = "0.10.2", optional = true }
lazy_static = { version = "1.5.0", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
merkle_hash = { version = "3.7.0", optional = true }
merge-struct = { version = "0.1.0", optional = true }
pretty_number = { version = "0.1.0", optional = true }
data-encoding = { version = "2.6.0", optional = true }
strip-ansi-escapes = { version = "0.2.0", optional = true }
notify-debouncer-mini = { version = "0.4.1", optional = true }
human_bytes = { version = "0.4.3", default-features = false, optional = true  }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "blocking", "rustls-tls"], optional = true  }

# enable-feature = server
bytes = { version = "1.8.0", optional = true }
ntapi = { version = "0.4.1", optional = true }
libc = { version = "0.2.166", optional = true }
winapi = { version = "0.3.9", optional = true }
chrono = { version = "0.4.38", optional = true }
futures = { version = "0.3.31", optional = true }
bollard = { version = "0.15.0", optional = true }
rocket_ws = { version = "0.1.1", optional = true }
tokio-util = { version = "0.7.12", optional = true }
futures-core = { version = "0.3.31", optional = true }
futures-util = { version = "0.3.31", optional = true }
serde_derive = { version = "1.0.215", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
tokio = { version = "1.41.1", features = ["full"], optional = true  }
rocket = { version = "0.5.1", features = ["json", "msgpack"], optional = true  }

[build-dependencies]
chrono = "0.4.38"
