[package]
name = "maid_server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "🔨 Build server for maid"

[dependencies]
tar.workspace = true
log.workspace = true
uuid.workspace = true
clap.workspace = true
flate2.workspace = true
colored.workspace = true
clap-verbosity-flag.workspace = true
global_placeholders.workspace = true

# make workspace
home = "0.5.9"
bytes = "1.8.0"
ntapi = "0.4.1"
libc = "0.2.164"
winapi = "0.3.9"
anyhow = "1.0.93"
chrono = "0.4.38"
futures = "0.3.31"
bollard = "0.15.0"
termcolor = "1.4.1"
macros-rs = "0.5.2"
indicatif = "0.17.9"
tokio-util = "0.7.12"
tungstenite = "0.20.1"
serde_json = "1.0.133"
futures-core = "0.3.31"
futures-util = "0.3.31"
serde_derive = "1.0.215"
text_placeholder = "0.5.1"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json", "msgpack"] }
rocket_ws = "0.1.1"
pretty_env_logger = "0.5.0"
