[package]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

name = "maid"
readme = "../../README.md"
description = "🔨 An easy to use make alternative."

[dependencies]
tar.workspace = true
url.workspace = true
log.workspace = true
uuid.workspace = true
clap.workspace = true
flate2.workspace = true
reqwest.workspace = true
colored.workspace = true
env_logger.workspace = true
pretty_number.workspace = true
global_placeholders.workspace = true

home = "0.5.9"
toml = "0.8.19"
json5 = "0.4.1"
notify = "6.1.1"
inquire = "0.6.2"
anyhow = "1.0.93"
fs_extra = "1.3.0"
termcolor = "1.4.1"
macros-rs = "0.5.2"
indicatif = "0.17.9"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
merkle_hash = "3.7.0"
merge-struct = "0.1.0"
data-encoding = "2.6.0"
text_placeholder = "0.5.1"
strip-ansi-escapes = "0.2.0"
clap-verbosity-flag = "2.2.3"
notify-debouncer-mini = "0.4.1"
serde = { version = "1.0.215", features = ["derive"] }
human_bytes = { version = "0.4.3", default-features = false }
tungstenite = { version = "0.20.1", features = ["rustls-tls-webpki-roots"] }
lazy_static = "1.5.0"

[build-dependencies]
chrono = "0.4.38"
